objects/PC_OcrTemplateMapping__c.object
<CustomObject>
    <description>Map the fields of the incoming form/attachment to the equivalent fields in the appropriate Salesforce data object</description>
    <fields>
        <fullName>PC_FieldMapping__c</fullName>
        <description>JSON String that holds the mapping of form fields to the sObject fields</description>
        <inlineHelpText>JSON String that holds the mapping of form fields to the sObject fields.
Format. [{&apos;Key1&apos;:&apos;Value1&apos;}, {&apos;Key2&apos;:&apos;Value2&apos;}]</inlineHelpText>
        <label>Field Mapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_InternalMappingNumber__c</fullName>
        <description>Auto-generated unique ID for OCR Template mapping. It can also be used for migrating across organizations.</description>
        <externalId>true</externalId>
        <inlineHelpText>Auto-generated unique ID for OCR Template mapping. It can also be used for migrating across organizations.</inlineHelpText>
        <label>Internal Mapping Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the mapping is active (true) or not (false)</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_OcrTemplateType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OCR Template Type</label>
        <referenceTo>PC_OcrTemplateType__c</referenceTo>
        <relationshipLabel>OCR Template Mappings</relationshipLabel>
        <relationshipName>OCR_Template_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_TargetObjectRecordType__c</fullName>
        <description>Record Type of the Target Object</description>
        <label>Target Object Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TargetObject__c</fullName>
        <description>The API name of the sObject where you want to store the data</description>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OCR Template Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_OcrTemplateType__c</columns>
        <columns>PC_TargetObject__c</columns>
        <columns>PC_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OCR Template Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCR Template Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>